[MN-672][FIX]Retours relevé périodique : visibilité liste élève

--- a/src/main/resources/public/sass/global/specifics/_competences.scss
+++ b/src/main/resources/public/sass/global/specifics/_competences.scss
@@ -901,6 +901,9 @@ body.evaluations {
     }
     &.openedAppreciation{
       height: 300px;
+      .plus-input::after {
+        content: "\e841";
+      }
     }
   }
 
